--- a/css/scss/pages/_search.scss
+++ b/css/scss/pages/_search.scss
@@ -1918,8 +1918,8 @@
                 }
 
                 .c_title {
-                    font-size: $font20;
-                    font-weight: $f_sizeB;
+                    font-size: $font18;
+                    font-weight: 600;
                     line-height: 1.2;
                     color: $col181;
                 }
