실서버 오픈 버전. 완료료

--- a/css/layout.css
+++ b/css/layout.css
@@ -194,6 +194,7 @@ button span,
 	background-color: #fff;
 	border-bottom: 1px solid #D8D8D8;
 	width: 100%;
+	box-sizing: border-box;
 	overflow-x: scroll;
 }
 
