--- a/css/scss/pages/_home.scss
+++ b/css/scss/pages/_home.scss
@@ -533,6 +533,19 @@
                             }
                         }
                     }
+                    .day {
+                        margin-left: auto;
+                        span {
+                            color: var(--Gray-gray500, #8C98A7);
+                            text-align: right;
+                            font-family: var(--Body, Pretendard);
+                            font-size: var(--Size-xs-12, 12px);
+                            font-style: normal;
+                            font-weight: var(--Weight-500, 500);
+                            line-height: var(--Line-height-xs-12, 14px); /* 116.667% */
+                            letter-spacing: var(--Tracking-md, -0.3px);
+                        }
+                    }
                 }
 
                 .data {                    
